--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" id="top">
         <header>
             <nav>
                 <ul>
@@ -24,9 +24,13 @@
             </nav>
         </header>
 
-        <div class="bodyImg">
-                <img class="mainImg" src="https://img.freepik.com/free-photo/handsome-man-presenting-something_1368-87.jpg?w=740&t=st=1680536040~exp=1680536640~hmac=e417a414c80d1a7f961298d1d4aeb4b6a85812ac4000313252ef36b1d2aad7c7">
-        </div>    
+        <section class="gallery">
+            <div style="background-image: url('Images/1.jpg');" class="mainImg"> </div>
+            <div style="background-image: url('Images/2.jpg');" class="mainImg"> </div>
+            <div style="background-image: url('Images/3.jpg');" class="mainImg"> </div>
+            <div style="background-image: url('Images/5.jpg');" class="mainImg"> </div>
+            <div style="background-image: url('Images/6.jpg');" class="mainImg"> </div>
+        </section>    
 
         <section class="education">
             <h2>EDUCATION</h2>
@@ -77,35 +81,36 @@
 
         <Section class="skills">
             <h2> SKILLS </h2>
-            <ul>
-                <li>    Problem solving.</li>
-                <li>    Records management.</li>
-                <li>    Customer service.</li>
-                <li>    Meeting planning and Documentation.</li>
-                <li>    Administrative support.</li>
-                <li>    Professional and Mature handling of workplace situations.</li>
-                <li>    Staff collaboration and Support.</li>
-            </ul>
+            <p>
+            Problem solving.<br />
+            Records management.<br />
+            Customer service.<br />
+            Meeting planning and Documentation.<br />
+            Administrative support.<br />
+            Professional and Mature handling of workplace situations.<br />
+            Staff collaboration and Support.<br />
+            </p>
         </section>
 
         <section class="Referees">
-            <h2>REFERENCES</h2>
-            <ul>
-                <li>Mrs. Folami Adeoluwa <br/>
+                <h2>REFERENCES</h2>
+                <p>
+                Mrs. Folami Adeoluwa <br/>
                 University of Lagos <br/>
                 Akoka, Yaba, <br/>
                 Lagos State. <br/>
                 Phone: +2347036406445 <br/>
                 Email: afolami@unilag.edu.ng
-                </li>
+                </p>
                 
-                <li>Mr. Ayanda Waidi Olanrewaju <br/>
+                <p>
+                Mr. Ayanda Waidi Olanrewaju <br/>
                 Merchant <br/>
                 Lagos State. <br/>
                 Phone: +2348035629319 <br/>
                 Email:  
-                </li>   
-            </ul>    
+                </p>   
+                
         </section>
 
 
@@ -115,11 +120,12 @@
             Address: 15, Ila Oragun Street, Off Elebiju Road, Ketu, Lagos State, Nigeria. <br/>
         </section>
 
-    </div>
+   
 
-    <footer>
-        Ayanda Idris Olalekan (c) 2023
-    </footer>
+        <footer>
+            Ayanda Idris Olalekan (c) 2023
+        </footer>
+    </div>    
 </body>
 
 </html>
