--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a href="#contact" class="btn">Contact Me</a>
             </div>
             <div class="hero-image">
-                <img src="Images/profile.jpg" alt="Idris Ayanda">
+                <img src="Images/1.jpg" alt="Idris Ayanda">
             </div>
         </section>
 
@@ -165,3 +165,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
